force-app/main/default/objects/TopTenArticle__c.object
<CustomObject>
    <description>Define Top Ten Articles for pinning top in communities</description>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>Article Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>Article Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>IF(TEXT($UserRole.PortalType)==&apos;CustomerPortal&apos;,HYPERLINK(  LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390))+&apos;s/article/&apos;+ ArticleType__c, Name ,&quot;_self&quot;),HYPERLINK(LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390))+ArticleType__c, Name ,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_UrlName__c</fullName>
        <label>Article UrlName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Order__c</fullName>
        <label>External Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Article for External in top 10</description>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Order__c</fullName>
        <label>Staff Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Article for Staff in top 10</description>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Order__c</fullName>
        <label>Student Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Article for Student</description>
        <label>Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TopTenArticle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External__c</columns>
        <columns>External_Order__c</columns>
        <columns>Staff__c</columns>
        <columns>Staff_Order__c</columns>
        <columns>Student__c</columns>
        <columns>Student_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Top_10_Student_Articles</fullName>
        <columns>NAME</columns>
        <columns>Article_Link__c</columns>
        <columns>External__c</columns>
        <columns>External_Order__c</columns>
        <columns>Staff__c</columns>
        <columns>Staff_Order__c</columns>
        <columns>Student__c</columns>
        <columns>Student_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Student__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Top 10 Student Articles</label>
    </listViews>
    <nameField>
        <label>Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TopTenArticles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>